kaizhengde v1.2.2 (layout bug fixes)

--- a/src/components/item/item.module.css
+++ b/src/components/item/item.module.css
@@ -12,7 +12,12 @@
 .itemWithSeparator
 {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: left;
+  column-gap: 2px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .itemsContainer.overflow
